--- a/src/com/raven/form/Compra_Form.form
+++ b/src/com/raven/form/Compra_Form.form
@@ -54,8 +54,6 @@
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="jTextFieldBuscador" min="-2" pref="200" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
-                                  <Component id="jButton4" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="jButtonBuscarCliente" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="jButtonEliminarCliente" min="-2" max="-2" attributes="0"/>
@@ -72,6 +70,8 @@
                                   <Component id="jButtonExcelTabla" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="jButtonPDFTabla" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Component id="jButton4" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
@@ -171,7 +171,6 @@
                       <Component id="jButtonBuscarCliente" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jComboBoxClientes" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jTextFieldBuscador" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButton4" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -207,7 +206,7 @@
                               <Component id="jTextFieldBuscadorProductos" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="jScrollPane" pref="146" max="32767" attributes="0"/>
+                          <Component id="jScrollPane" pref="144" max="32767" attributes="0"/>
                           <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel13" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -237,9 +236,10 @@
                   <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jButtonPDFTabla" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButtonExcelTabla" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jButtonPDFTabla" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                      <Component id="jButtonExcelTabla" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
                       <Component id="jButton3" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jButton4" alignment="1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
