--- a/src/com/raven/form/Compra_Form.form
+++ b/src/com/raven/form/Compra_Form.form
@@ -333,7 +333,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonPDFTabla">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Imprimir recibo previa PDF"/>
+            <Property name="text" type="java.lang.String" value="Imprimir presupuesto PDF"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonPDFTablaActionPerformed"/>
@@ -341,7 +341,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonExcelTabla">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Imprimir recibo previa Excel"/>
+            <Property name="text" type="java.lang.String" value="Imprimir presupuesto Excel"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonExcelTablaActionPerformed"/>
